# Site-Downloader-2.0

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  app.py  entrypoint.sh  grabber.py  pyproject.toml  railway.json  requirements.txt
templates/: index.html
