[project]
name = "11-website-downloader2"
version = "0.1.0"
description = "Complete static website snapshot tool for offline design-system extraction"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "flask>=3.1.0",
    "gunicorn>=21.2.0",
    "playwright>=1.44.0",
    "psutil>=5.9.0",
]
